# template_hack

./: .gitignore  CMakeLists.txt  README.md  gin_main.go  go.mod  go.sum  test.go
03-Graph-DFS/src/: AdjList.java  AdjMatrix.java  AdjSet.java  Graph.java  GraphDFS.java
04-Graph-DFS-Applications/01-Connected-Components-Count/src/: CC.java  Graph.java
04-Graph-DFS-Applications/02-Connected-Components/src/: CC.java  Graph.java
04-Graph-DFS-Applications/03-More-about-Connected-Components/src/: CC.java  Graph.java
04-Graph-DFS-Applications/05-Single-Source-Path/src/: Graph.java  SingleSourcePath.java
04-Graph-DFS-Applications/08-Path-improvement/src/: Graph.java  Path.java
04-Graph-DFS-Applications/09-Cycle-Detection/src/: CycleDetection.java  Graph.java
04-Graph-DFS-Applications/11-Bipartition-Detection/src/: BipartitionDetection.java  Graph.java
05-Graph-BFS/02-BFS/src/: Graph.java  GraphBFS.java
args/: main.cpp
dedis/: InterfaceResult.go  OperationAttr.go  SimpleCache.go  SliceResult.go  StringOperation.go  StringResult.go  index.go  policy.go
expvar/: main.go
lib/: cachepool.go  dbconfig.go  dbgetter.go  models.go
list/: main.cpp
optionargs/: main.go
pool/: main.go
quick_sort/: main.cpp
redis/: redis_main.go
redis/dedis/: InterfaceResult.go  Iterator.go  OperationAttr.go  SimpleCache.go  SliceResult.go  StringOperation.go
reflect_static/: main.cpp  message_generator.hpp
src/: AdjList.java  AdjMatrix.java  AdjSet.java  Graph.java  GraphDFS.java
src/controllers/: IndexController.go
src/middlewares/: TokenCheck.go
(+16 files in other folders)
